# Fe-Fool

./: .gitignore  README.md  github.txt  log.txt  main.spec  params.yaml  pyproject.toml  requirements _cpu.txt  requirements_cpu.txt  requirements_gpu.txt
code/: check_torch.py  main.py
code/rembg/: session_factory.py
code/robot/: __init__.py  calibration1.pickle  calibration2.pickle  chess.py  gobang.py  image_find_focus.py  image_generate_dataset.py  robot_ik.py  robot_master.py  robot_params.yaml  tools.py  window_detection.py  window_generate.py  window_robot.py  window_train.py  window_yolo.py
code/yolov5/: detect_self.py  train.py
code/yolov5/data/: self_data.yaml
image_data/hands/labels/test/: CARDS_COURTYARD_B_T_frame_0295_jpg.rf.479a6987460ca993ce070ce5277c6ed9.txt  CARDS_COURTYARD_B_T_frame_0580_jpg.rf.6f2920f55005d993936be103752c0cf5.txt  CARDS_COURTYARD_B_T_frame_0649_jpg.rf.b4922f808f04d2842539e89cbcab6ec4.txt  CARDS_COURTYARD_B_T_frame_0815_jpg.rf.7dabad93af4edf0cfb982c0b6f640965.txt  CARDS_COURTYARD_B_T_frame_1009_jpg.rf.6993f826a59547a90b2cded27e619dd8.txt  CARDS_COURTYARD_B_T_frame_1024_jpg.rf.9e96aa293d2f73e690259e37130a8c1f.txt  CARDS_COURTYARD_B_T_frame_1470_jpg.rf.ab910a363eddd75658f838f0251aa629.txt  CARDS_COURTYARD_B_T_frame_1804_jpg.rf.7918012efa29a48b5d91c85e49eb51f3.txt  (+471 more)
src/: main.py
src/rembg/: cli.py
src/robot/: calibration0.pickle  chess.py  gobang.py  robot_ik.py  robot_master.py  tools.py  window_detection.py  window_robot.py
src/yolov5/: train.py
src/yolov5/utils/: plots.py  torch_utils.py
准备文件/: 硬件清单.xlsx
(+4312 files in other folders)
