[project]
name = "fe-fool"
version = "0.1.0"
requires-python = "==3.9.6"
dependencies = [
    "augmentor==0.2.10",
    "colorlog>=6.9.0",
    "gdown==4.5.3",
    "matplotlib==3.8.1",
    "numpy==1.24.2",
    "onnxruntime==1.12.0",
    "opencv-python==4.5.4.60",
    "pandas>=1.1.4",
    "pillow>=7.1.2",
    "playsound==1.2.2",
    "pymatting==1.1.8",
    "pyserial==3.5",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "seaborn>=0.11.0",
    "setuptools==59.5.0",
    "tensorboard>=2.4.1",
    "torch==2.0.0",
    "torchvision==0.15.1",
    "tqdm>=4.41.0",
]
